--- a/textmetricsindex.html
+++ b/textmetricsindex.html
@@ -125,7 +125,7 @@
             padding: var(--padding);
             border-radius: 8px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-            max-width: 1000px;
+            /*max-width: 1200px;*/
             width: 100%;
             margin: 5px auto;
             padding-top: 80px; /* Adjusted padding to account for the header height */
@@ -333,7 +333,7 @@
         /* Metric Group and Card Styling */
         .metric-group {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(3, 1fr);
             gap: 20px;
         }
     
@@ -438,7 +438,7 @@
             justify-content: center;
             align-items: center;
             flex: 1;
-            max-width: 40%;
+            max-width: 30%;
             height: 100%;
         }
 
@@ -619,10 +619,6 @@
     </header>
 
     <main>
-        <!-- <h1>Text Similarity Metrics Analyser</h1>
-        <button id="toggle-dark-mode" style="position: absolute; top: 20px; right: 20px; background: none; border: none; cursor: pointer; font-size: 1.5rem;">
-            <i id="dark-mode-icon" class="fas fa-moon"></i>
-        </button> -->
 
         <!-- Input Section -->
         <section id="single-vs-single-section" class="flex-container">
